--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_APPWRITE_ENDPOINT=https://appwrite.dvlppro.com
+NEXT_PUBLIC_APPWRITE_ENDPOINT=https://appwrite.dvlppro.com/v1
 NEXT_PUBLIC_APPWRITE_PROJET_ID=649364f3077d36e5ad49
 NEXT_PUBLIC_APPWRITE_DATABASE_ID=649366029a766e941dc9
 NEXT_PUBLIC_APPWRITE_TODOS_COLLECTION_ID=6493662023476889b1d3
